# booksanon

./: .gitignore  Dockerfile  README.md  app.py  books.db  config_dict.py  deploy.sh  dev-requirements.txt  docker-compose.yml  eslint.config.js  makefile  open_lib_api_calls.py  package-lock.json  package.json  pyproject.toml  requirements.txt
data/: books.db  prod_books_20240307.db
src/: book.py  calls.py  cli.py  google_books.py  openlib.py
src/calls/: __main__.py  book.py  calls.py  cli.py  client.py  google_books.py  openlib.py
src/config/: logging_config.py  settings.py
src/db/: __init__.py  cli.py  db.py  models.py
src/repositories/: __init__.py  author_repository.py  book_repository.py  queue_repository.py  repositories.py  review_repository.py  user_repository.py  utils.py
src/server/: app.py  form_validators.py  huey_resources.py  middleware.py  resources.py  routes.py  settings.py  tasks.py  views.py
src/tests/: test_client.py  test_openlib.py
src/utils/: __init__.py  utils.py
static/: history.css  navbar.js  recommend.css  review.js  search.css  search.js  styles.css  submit.css  submit.js
static/css/: styles.css
static/js/: add-book.js  book-cards.js  index.js  local-search.js  scripts.js  search-form.js  search.js  submission.js  utils.js
templates/: 400.html  404.html  500.html  about.html  add-book.html  add_book.html  author.html  book.html  error.html  history.html  index.html  layout.html  recommend.html  review.html  search.html  search_history.html  submission.html  submit.html
templates/partials/: single_book.html  single_review.html
tests/: conftest.py  tests.py
tests/calls/: test_client.py  test_openlib.py
tests/repositories/: test_author_repo.py  test_book_repo.py  test_review_repo.py  test_user_repo.py
tests/server/: test_form_validators.py  test_views.py
tests/test_calls/: test_openlib.py
(+26 files in other folders)
