[project]
name = "booksanon"
readme = "README.md"
description = "Web app for recommending books anonymously"
license = "MIT"
license-files = ["LICENSE"]
version = "0.0.1"
dependencies = [
    "aiosql==13.4",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "huey==2.5.3",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "starlette==0.47.0",
    "uvicorn==0.34.3",
]
[project.scripts]
books = "cli:main"
[project.optional-dependencies]
lint = [
    "ruff==0.9.6",
    "mypy==1.15.0",
]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-mock==3.14.1",
]
[tool.ruff]
line-length = 120
indent-width = 4
[tool.ruff.lint]
# Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]
[tool.mypy]
ignore_missing_imports = true
[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
asyncio_mode = "auto"
